--- a/play.html
+++ b/play.html
@@ -3,6 +3,7 @@
 <title>ProjectX WebGL Demo</title>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
+<script type="text/javascript" src="webgl-debug.js"></script>
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="ship.js"></script>
 <script type="text/javascript" src="gamma.js"></script>
