--- a/play.html
+++ b/play.html
@@ -34,14 +34,18 @@
 </head>
 <body>
 
-	<div id="canvas-wrapper" style="padding:1em;">
-		<canvas id="lesson02-canvas" width="500" height="500"></canvas>
+	<div style="padding:1em;">
+		<div id="canvas-wrapper">
+			<canvas id="lesson02-canvas" width="500" height="500"></canvas>
+		</div>
 	</div>
 	
 	<div id="panel">
 		<b class="button" onclick="$('#settings-body').toggle()">Panel</b>
 		<div class="body" id="settings-body">
 			<div style="float:left;">
+
+<form>
 
 				Info
 				<div class="body" id="info-body">
@@ -112,6 +116,9 @@
 				</div>
 			</div>
 			<div id="textures" style="float:left; margin:0.5em;"></div>
+
+</form>
+
 		</div>
 	</div>
 
