--- a/play.html
+++ b/play.html
@@ -18,6 +18,7 @@
 <script type="text/javascript" src="inputs.js"></script>
 <script type="text/javascript" src="helpers.js"></script>
 <script type="text/javascript" src="mouse.js"></script>
+<script type="text/javascript" src="physics.js"></script>
 <script type="text/javascript" src="main.js"></script>
 
 <style type="text/css">
