moving external libs into their own folder

--- a/play.html
+++ b/play.html
@@ -3,13 +3,14 @@
 <title>ProjectX WebGL Demo</title>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
-<script type="text/javascript" src="webgl-debug.js"></script>
-<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="lib/webgl-debug.js"></script>
+<script type="text/javascript" src="lib/jquery.js"></script>
+<script type="text/javascript" src="lib/sylvester.js"></script>
+<script type="text/javascript" src="lib/glUtils.js"></script>
+
 <script type="text/javascript" src="ship.js"></script>
 <script type="text/javascript" src="gamma.js"></script>
 <script type="text/javascript" src="fps.js"></script>
-<script type="text/javascript" src="sylvester.js"></script>
-<script type="text/javascript" src="glUtils.js"></script>
 <script type="text/javascript" src="vector.js"></script>
 <script type="text/javascript" src="quat.js"></script>
 <script type="text/javascript" src="gl.js"></script>
