moved to physics based movement/turning for local player; added settings on ui to control camera physics; added networked players to physics world;

--- a/play.html
+++ b/play.html
@@ -15,7 +15,6 @@
 <script type="text/javascript" src="quat.js"></script>
 <script type="text/javascript" src="gl.js"></script>
 <script type="text/javascript" src="images.js"></script>
-<script type="text/javascript" src="view.js"></script>
 <script type="text/javascript" src="inputs.js"></script>
 <script type="text/javascript" src="helpers.js"></script>
 <script type="text/javascript" src="mouse.js"></script>
@@ -70,8 +69,14 @@
 					<div style="display:inline-block; width:9em"> down     </div>d <br>
 					<div style="display:inline-block; width:9em"> left     </div>f <br>
 					<div style="display:inline-block; width:9em"> right    </div>g <br>
-					<div style="display:inline-block; width:9em"> Mouse Accell: </div>
-						<input id="mouse-accell" type="text" value="3" style="width:2em;"/>
+					<div style="display:inline-block; width:9em"> Turn Accell: </div>
+						<input id="turn-accell" type="text" value="1" style="width:2em;"/> <br>
+					<div style="display:inline-block; width:9em"> Move Accell: </div>
+						<input id="move-accell" type="text" value="2" style="width:2em;"/> <br>
+					<div style="display:inline-block; width:9em"> Move Drag: </div>
+						<input id="move-drag" type="text" value="0.8" style="width:2em;"/> <br>
+					<div style="display:inline-block; width:9em"> Turn Drag: </div>
+						<input id="turn-drag" type="text" value="0.5" style="width:2em;"/> <br>
 				</div>
 
 				Graphics
