updated fps counter to be generic so i can use it for multiple things; added setZeroTimeout which is faster than setInterval/setTimeout; fixed many bugs; added info on how many fps physics/rendering/main are getting;

--- a/play.html
+++ b/play.html
@@ -50,7 +50,9 @@
 
 				Info
 				<div class="body" id="info-body">
-					<div style="display:inline-block; width:9em"> FPS:                </div><span id="fps">                 0       </span><br>
+					<div style="display:inline-block; width:9em"> Main FPS:           </div><span id="main_fps">            0       </span><br>
+					<div style="display:inline-block; width:9em"> Render FPS:         </div><span id="fps">                 0       </span><br>
+					<div style="display:inline-block; width:9em"> Phsyics FPS:        </div><span id="physics_fps">         0       </span><br>
 					<div style="display:inline-block; width:9em"> Position:           </div><span id="pos">                 0,0,0   </span><br>
 					<div style="display:inline-block; width:9em"> Orientation:        </div><span id="quat">                0,0,0,0 </span><br>
 					<div style="display:inline-block; width:9em"> Mouse:              </div><span id="mouse">               0,0     </span><br>
@@ -72,7 +74,7 @@
 					<div style="display:inline-block; width:9em"> Turn Accell: </div>
 						<input id="turn-accell" type="text" value="1" style="width:2em;"/> <br>
 					<div style="display:inline-block; width:9em"> Move Accell: </div>
-						<input id="move-accell" type="text" value="100" style="width:2em;"/> <br>
+						<input id="move-accell" type="text" value="20" style="width:2em;"/> <br>
 					<div style="display:inline-block; width:9em"> Move Drag: </div>
 						<input id="move-drag" type="text" value="0.8" style="width:2em;"/> <br>
 					<div style="display:inline-block; width:9em"> Turn Drag: </div>
