--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-play.html
+<html>
+	<head>
+		<title>PXWGL Demo</title>
+	</head>
+	<body>
+		<p><a href="https://github.com/chino/pxwgl-net">Code</a></p>
+		<p><a href="play.html">Play</a></p>
+	</body>
+</html>
