hardcoding to jquery-$version.js since github pages doesnt support symlinks

--- a/play.html
+++ b/play.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
 <script type="text/javascript" src="lib/webgl-debug.js"></script>
-<script type="text/javascript" src="lib/jquery.js"></script>
+<script type="text/javascript" src="lib/jquery-1.4.2.js"></script>
 <script type="text/javascript" src="lib/sylvester.js"></script>
 <script type="text/javascript" src="lib/glUtils.js"></script>
 
