adding game-shim.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="lib/jquery-1.4.2.js"></script>
 <script type="text/javascript" src="lib/sylvester.js"></script>
 <script type="text/javascript" src="lib/glUtils.js"></script>
+<script type="text/javascript" src="lib/game-shim.js"></script>
 
 <script type="text/javascript" src="helpers.js"></script>
 <script type="text/javascript" src="ship.js"></script>
