adding game-shims.js detected browser capabilities to ui

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 
 <form>
 
+				Browser Support
+				<div class="body" id="info-body">
+					<div style="display:inline-block; width:9em"> Fullscreen:         </div><span id="fullscreen">          no       </span><br>
+					<div style="display:inline-block; width:9em"> Pointer Lock:       </div><span id="pointer_lock">          no       </span><br>
+					<div style="display:inline-block; width:9em"> GamePad:            </div><span id="game_pad">            no       </span><br>
+					<div style="display:inline-block; width:9em"> High Rest Timers:   </div><span id="high_res_timers">     no       </span><br>
+				</div>
+
 				Info
 				<div class="body" id="info-body">
 					<div style="display:inline-block; width:9em"> Main FPS:           </div><span id="main_fps">            0       </span><br>
