changing no to false since js initialization will set it to true/false

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
 				Browser Support
 				<div class="body" id="info-body">
-					<div style="display:inline-block; width:9em"> Fullscreen:         </div><span id="fullscreen">          no       </span><br>
-					<div style="display:inline-block; width:9em"> Pointer Lock:       </div><span id="pointer_lock">          no       </span><br>
-					<div style="display:inline-block; width:9em"> GamePad:            </div><span id="game_pad">            no       </span><br>
-					<div style="display:inline-block; width:9em"> High Rest Timers:   </div><span id="high_res_timers">     no       </span><br>
+					<div style="display:inline-block; width:9em"> Fullscreen:         </div><span id="fullscreen">          false       </span><br>
+					<div style="display:inline-block; width:9em"> Pointer Lock:       </div><span id="pointer_lock">        false       </span><br>
+					<div style="display:inline-block; width:9em"> GamePad:            </div><span id="game_pad">            false       </span><br>
+					<div style="display:inline-block; width:9em"> High Rest Timers:   </div><span id="high_res_timers">     false       </span><br>
 				</div>
 
 				Info
