--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div style="display:inline-block; width:9em"> Fullscreen:         </div><span id="fullscreen">          false       </span><br>
 					<div style="display:inline-block; width:9em"> Pointer Lock:       </div><span id="pointer_lock">        false       </span><br>
 					<div style="display:inline-block; width:9em"> GamePad:            </div><span id="game_pad">            false       </span><br>
-					<div style="display:inline-block; width:9em"> High Rest Timers:   </div><span id="high_res_timers">     false       </span><br>
+					<div style="display:inline-block; width:9em"> High Res Timers:    </div><span id="high_res_timers">     false       </span><br>
 				</div>
 
 				Info
