Adding request full screen button

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		<div id="canvas-wrapper">
 			<canvas id="lesson02-canvas" width="500" height="500"></canvas>
 		</div>
+		<input id="request_full_screen" type="button" value="Fullscreen"/>
 	</div>
 	
 	<div id="panel">
