--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 	.toolbar { padding-bottom:0.5em; margin-bottom:0.5em; border-bottom:1px solid black; }
 	textarea { padding:0; border:none; }
 	canvas { border:medium none; }
+	#lesson02-canvas { width: 500px; height: 500px; }
+	#lesson02-canvas:-webkit-full-screen     { width: 100%; height: 100%; }
+	#lesson02-canvas:-moz-full-screen        { width: 100%; height: 100%; }
 </style>
 
 </head>
@@ -38,7 +41,7 @@
 
 	<div style="padding:1em;">
 		<div id="canvas-wrapper">
-			<canvas id="lesson02-canvas" width="500" height="500"></canvas>
+			<canvas id="lesson02-canvas"></canvas>
 		</div>
 		<button id="request_full_screen">Fullscreen</button>
 	</div>
