width/height must be set on the canvas element for some reason

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 	.toolbar { padding-bottom:0.5em; margin-bottom:0.5em; border-bottom:1px solid black; }
 	textarea { padding:0; border:none; }
 	canvas { border:medium none; }
-	#main-canvas { width: 500px; height: 500px; }
 	#main-canvas:-webkit-full-screen     { width: 100%; height: 100%; }
 	#main-canvas:-moz-full-screen        { width: 100%; height: 100%; }
 </style>
@@ -41,7 +40,7 @@
 
 	<div style="padding:1em;">
 		<div id="canvas-wrapper">
-			<canvas id="main-canvas"></canvas>
+			<canvas id="main-canvas" width="500" height="500"></canvas>
 		</div>
 		<button id="request_full_screen">Fullscreen</button>
 	</div>
