adding request pointer lock to the canvas

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 			<canvas id="main-canvas" width="500" height="500"></canvas>
 		</div>
 		<button id="request_full_screen">Fullscreen</button>
+		<button id="request_pointer_lock">Lock Pointer</button>
 	</div>
 	
 	<div id="panel">
