adding ability to set clear color

--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
 							<input id="canvas-width" type="text" value="500" style="width:4em;"/> x 
 							<input id="canvas-height" type="text" value="500" style="width:4em;"/><br>
 
+					<div style="display:inline-block; width:9em"> Clear Color (rgb): </div>
+							<input id="clear-red"   type="text" value="0.0" style="width:3em;"/>
+							<input id="clear-green" type="text" value="0.0" style="width:3em;"/>
+							<input id="clear-blue"  type="text" value="0.0" style="width:3em;"/><br>
+
 					<div style="display:inline-block; width:9em"> Front Face: </div>
 					<select id="front-face">
 						<option value="cw">Clock Wise</option>
