testing out jekyll liquid templates

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 </head>
 <body>
 
+	<div>Generated at: {{ site.time }}</div>
+
 	<div style="padding:1em;">
 		<div id="canvas-wrapper">
 			<canvas id="main-canvas" width="500" height="500"></canvas>
