moving the generated timestamp into the panel

--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
 </head>
 <body>
 
-	<div>Generated at: {{ site.time }}</div>
-
 	<div style="padding:1em;">
 		<div id="canvas-wrapper">
 			<canvas id="main-canvas" width="500" height="500"></canvas>
@@ -54,6 +52,8 @@
 			<div style="float:left;">
 
 <form>
+
+				<p>Generated at: {{ site.time }}</p>
 
 				Browser Support
 				<div class="body" id="info-body">
