--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
 
 <form>
 
-				<p>Generated at: {{ site.time }}</p>
+				Project Info
+				<div style="padding:1em">
+					<div style="display:inline-block; width:9em">Generated at:        </div><span>{{ site.time }}</span><br>
+					<div style="display:inline-block; width:9em">GitHub:              </div><a href="https://github.com/chino/pxwgl-net">Project Page</a></span><br>
+				</div>
 
 				Browser Support
 				<div class="body" id="info-body">
