fixing duplicated id from copy paste fail

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</div>
 
 				Browser Support
-				<div class="body" id="info-body">
+				<div style="padding:1em">
 					<div style="display:inline-block; width:9em"> Fullscreen:         </div><span id="fullscreen">          false       </span><br>
 					<div style="display:inline-block; width:9em"> Pointer Lock:       </div><span id="pointer_lock">        false       </span><br>
 					<div style="display:inline-block; width:9em"> GamePad:            </div><span id="game_pad">            false       </span><br>
